--- a/src/layouts/general/layout.module.css
+++ b/src/layouts/general/layout.module.css
@@ -25,6 +25,7 @@
   position: fixed;
   z-index: 1;
   right: 0;
+  z-index: 150;
   width: 100vw;
 }
 
@@ -187,7 +188,7 @@
 
 .nav__background__active {
   position: absolute;
-  z-index: 0;
+  z-index: 50;
   left: -4px;
 }
 
@@ -200,7 +201,7 @@
   transition: all 300ms cubic-bezier(0.925, 0.045, 0.785, 0.925);
   transition-timing-function: cubic-bezier(0.925, 0.045, 0.785, 0.925);
   max-width: none;
-  z-index: 0;
+  z-index: 100;
 }
 
 .nav__inner {
@@ -378,6 +379,10 @@
   }
   .nav__inner {
     width: 25vw;
+  }
+  .header,
+  .header__dark {
+    z-index: 3;
   }
   .header__handbooks,
   .header__handbooks__dark {
